# portfolio

./: .gitattributes  Cargo.toml  README.md  Trunk.toml  index.html  input.css  package-lock.json  package.json  pnpm-lock.yaml  portfolio-1556871a2d58559d.js  portfolio-1556871a2d58559d_bg.wasm  portfolio-2aafa8f101a385b7_bg.wasm  portfolio-2f571507d0450bbc.js  portfolio-2f571507d0450bbc_bg.wasm  portfolio-32a85cb664f2e55.js  portfolio-32a85cb664f2e55_bg.wasm  portfolio-37bb57f9d65d7cf6.js  portfolio-37bb57f9d65d7cf6_bg.wasm  portfolio-39bfe84996a0da01_bg.wasm  portfolio-4f351f7783819ae.js  portfolio-4f351f7783819ae_bg.wasm  portfolio-4fc59b6ada33b70c.js  portfolio-4fc59b6ada33b70c_bg.wasm  portfolio-53eb8ab5d6d2200a.js  portfolio-53eb8ab5d6d2200a_bg.wasm  portfolio-5c132bac969d8f93.js  portfolio-5c132bac969d8f93_bg.wasm  portfolio-6a6e329633089108_bg.wasm  portfolio-70ab2b6da0c46b8d.js  portfolio-70ab2b6da0c46b8d_bg.wasm  portfolio-8a9724e4b74125a5_bg.wasm  portfolio-9e6d526ae1ff2d0d_bg.wasm  portfolio-dcfa505b690519a.js  portfolio-dcfa505b690519a_bg.wasm  portfolio-f39f3cfac5a26110.js  portfolio-f39f3cfac5a26110_bg.wasm  portfolio-f92ce0cb9f6e8281.js  portfolio-f92ce0cb9f6e8281_bg.wasm  styles-18babbe35139971b.css  styles-77e43e28c766b6c4.css  (+4 more)
.github/workflows/: deploy.yml  gh-pages-deploy.yml
app/: Cargo.toml
app/locales/: en.json  ru.json
app/src/: lib.rs
assets/: index-BQtEL4a2.js  index-CYQgYumX.css
locales/: en.json  ru.json
public/: output.css  styles.css
server/src/: main.rs
src/: App.tsx  home.rs  lib.rs
src/components/: contacts.rs  cta.tsx  (+18 more)
(+1 files in other folders)
