[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_i18n = "0.6.0-rc.2"
web-sys = "0.3.77"
js-sys = "0.3.77"

[package.metadata.leptos-i18n]
default = "ru"
locales = ["ru", "en"]

[features]
default = ["csr"]
csr = ["leptos/csr"]
